Ensure that the bottom grid cell actually contains the keyboard.
Also allow the size of the LW paper to grow slightly as input arrives,
and then provide a scrollbar.

--- a/tx2-web/src/styles.scss
+++ b/tx2-web/src/styles.scss
@@ -50,21 +50,19 @@
     text-align: right;
 }
 
-.lw {
+.lw__box {
     border: 0px;
 }
 
-.lw__container {
+.lw {
+    overflow: clip;
     border: 0px;
 }
 
 .lw__input__keyboard {
-    position: absolute;
     border: 1px solid black;
     width: 800px;
     aspect-ratio: 23.8 / 14.5;
-    font: "12px sans-serif";
-    z-index: 0;
 
     &_hits {
         @extend .lw__input__keyboard;
@@ -72,6 +70,12 @@
         opacity: 0.0;
         /* Put the hit detector canvas in front of the keyboard picture */
         z-index: 1;
+    }
+    &_keys {
+        @extend .lw__input__keyboard;
+        font: "12px sans-serif";
+        /* Put the keyboard picture canvas behind the hit detector canvas */
+        z-index: 0;
     }
 }
 
@@ -92,6 +96,8 @@
 
     font-family: monospace;
     background-color: rgb(255, 255, 240);
+
+    min-height: 16ex;
 }
 
 .lw__output_container {
@@ -99,13 +105,12 @@
     border-style: none;
     margin: 0px 0px;
 
+    max-height: 30ex;
     overflow: auto;
-    height: 16ex;
 }
 
 .lw__output {
     font-family: monospace;
-    height: 4ex;
 }
 
 .lw__cursor  {
